# npxc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-plz.yml
examples/: mcp_probe.rs
src/: cli.rs  dockerfile.rs  doctor.rs  error.rs  lib.rs  main.rs
src/config/: global.rs  merge.rs  mod.rs  package.rs
src/paths/: identify.rs  mod.rs  publish.rs  validate.rs
src/rpc/: framing.rs  message.rs  mod.rs  pipeline.rs
src/runtime/: build.rs  mod.rs  network.rs  proc.rs  session.rs
src/tunnel/: device.rs  dns.rs  endpoint.rs  keys.rs  mod.rs  peek.rs  policy.rs  wg.rs
templates/: Dockerfile.template  Dockerfile.wg-base
tests/: config_merge.rs  e2e_mock_server.rs  e2e_runtime.rs  e2e_tunnel.rs  framing.rs  path_identify.rs  path_validate.rs
